scrollbars fix for menu

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,4 +2,17 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "minima";
+@import "{{ site.theme }}";
+
+.site-header {
+	border: none;
+}
+
+.site-footer {
+	border: none;
+}
+
+body {
+	overflow: scroll;
+	/* always-on scrollbars so menu won't jump*/
+}
